# Event-Driven-ABAC-RAG

./: .dockerignore  .gitignore  Makefile  README.md  go.work  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/services/auth-service/: .env.example  Dockerfile  README.md  jest.config.mjs  package.json  tsconfig.json
apps/services/auth-service/prisma/: schema.prisma  seed.ts
apps/services/auth-service/src/: app.module.ts  auth.controller.ts  main.ts
apps/services/auth-service/src/admin/: admin.controller.ts  admin.service.ts
apps/services/auth-service/src/auth/: auth.service.ts  password-reset.service.ts
apps/services/auth-service/src/config/: configuration.ts
apps/services/auth-service/src/db/: prisma.service.ts  redis.provider.ts
apps/services/auth-service/src/jwt/: jwks.controller.ts  token.service.spec.ts  token.service.ts
apps/services/ingestion-retrieval-service/: Dockerfile  project.json  pyproject.toml
apps/services/ingestion-retrieval-service/src/ingestion_retrieval_service/: __init__.py  __main__.py
apps/services/rag-gateway-service/: Dockerfile  go.mod  project.json  rag
apps/web/: README.md
apps/web/mainapp/: Dockerfile  next.config.ts  package.json
apps/web/mainapp/src/: middleware.ts
apps/web/ragapp/: Dockerfile  next.config.ts  package.json
apps/web/search-mfe/: Dockerfile  next.config.ts  package.json
apps/web/shell/: Dockerfile  next.config.ts  package.json
infra/compose/: docker-compose.yml
infra/gateway/: README.md  krakend.json
(+45 files in other folders)
