[project]
name = "ingestion-retrieval-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shreyash019", email = "shreyashgaur1@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "arac-contracts",
    "langchain>=1.3.11",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
ingestion-retrieval-service = "ingestion_retrieval_service:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
arac-contracts = { workspace = true }
